--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -73,3 +73,6 @@ $fontSize-h3: 1.44em;
 $fontSize-h4: 1.2em;
 $fontSize-h5: 1.1em;
 $fontSize-h6: 1em;
+
+// Font Awesome icons
+$fa-bookmark: '\f02e';
