--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -21544,6 +21544,105 @@ a > .ck-content code {
   font-family: "Font Awesome 6 Free" !important;
   font-weight: 900 !important;
 }
+.ck-content .icon-fa-bookmark {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.ck-content .icon-fa-bookmark:hover, .ck-content .icon-fa-bookmark:focus, .ck-content .icon-fa-bookmark:active {
+  text-decoration: underline;
+}
+.ck-content .icon-fa-bookmark::before, .ck-content .icon-fa-bookmark::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.ck-content .icon-fa-bookmark::before, .ck-content .icon-fa-bookmark::after {
+  font: var(--fa-font-regular);
+}
+.ck-content .icon-fa-bookmark::before {
+  content: "\f02e";
+}
+.ck-content .icon-fa-bookmark-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.ck-content .icon-fa-bookmark-solid:hover, .ck-content .icon-fa-bookmark-solid:focus, .ck-content .icon-fa-bookmark-solid:active {
+  text-decoration: underline;
+}
+.ck-content .icon-fa-bookmark-solid::before, .ck-content .icon-fa-bookmark-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.ck-content .icon-fa-bookmark-solid::before, .ck-content .icon-fa-bookmark-solid::after {
+  font: var(--fa-font-solid);
+}
+.ck-content .icon-fa-bookmark-solid::before {
+  content: "\f02e";
+}
+.ck-content .icon-fa-bookmark-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.ck-content .icon-fa-bookmark-after:hover, .ck-content .icon-fa-bookmark-after:focus, .ck-content .icon-fa-bookmark-after:active {
+  text-decoration: underline;
+}
+.ck-content .icon-fa-bookmark-after::before, .ck-content .icon-fa-bookmark-after::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.ck-content .icon-fa-bookmark-after::before, .ck-content .icon-fa-bookmark-after::after {
+  font: var(--fa-font-regular);
+}
+.ck-content .icon-fa-bookmark-after::after {
+  content: "\f02e";
+}
+.ck-content .icon-fa-bookmark-after-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.ck-content .icon-fa-bookmark-after-solid:hover, .ck-content .icon-fa-bookmark-after-solid:focus, .ck-content .icon-fa-bookmark-after-solid:active {
+  text-decoration: underline;
+}
+.ck-content .icon-fa-bookmark-after-solid::before, .ck-content .icon-fa-bookmark-after-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.ck-content .icon-fa-bookmark-after-solid::before, .ck-content .icon-fa-bookmark-after-solid::after {
+  font: var(--fa-font-solid);
+}
+.ck-content .icon-fa-bookmark-after-solid::after {
+  content: "\f02e";
+}
+.ck-content .icon-fa-decoration-none:hover, .ck-content .icon-fa-decoration-none:focus, .ck-content .icon-fa-decoration-none:active {
+  text-decoration: none;
+}
 .ck-content .bc-gov-alertbanner {
   border: 0.0625em solid transparent;
   border-radius: 0.25em;
