--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -75,4 +75,7 @@ $fontSize-h5: 1.1em;
 $fontSize-h6: 1em;
 
 // Font Awesome icons
-$fa-bookmark: '\f02e';
+$fa-bookmark: \f02e;
+$fa-magnifying-glass: \f002;
+$fa-circle-xmark: \f057;
+$fa-filter: \f0b0;
