--- a/css/style.css
+++ b/css/style.css
@@ -25041,9 +25041,6 @@ html.bcbb-theme kbd {
           align-items: center;
   text-decoration: none;
 }
-.icon-fa-bookmark:hover, .icon-fa-bookmark:focus, .icon-fa-bookmark:active {
-  text-decoration: underline;
-}
 .icon-fa-bookmark::before, .icon-fa-bookmark::after {
   font-weight: 400;
   text-rendering: auto;
@@ -25065,9 +25062,6 @@ html.bcbb-theme kbd {
       -ms-flex-align: center;
           align-items: center;
   text-decoration: none;
-}
-.icon-fa-bookmark-solid:hover, .icon-fa-bookmark-solid:focus, .icon-fa-bookmark-solid:active {
-  text-decoration: underline;
 }
 .icon-fa-bookmark-solid::before, .icon-fa-bookmark-solid::after {
   font-weight: 400;
@@ -25091,9 +25085,6 @@ html.bcbb-theme kbd {
           align-items: center;
   text-decoration: none;
 }
-.icon-fa-bookmark-after:hover, .icon-fa-bookmark-after:focus, .icon-fa-bookmark-after:active {
-  text-decoration: underline;
-}
 .icon-fa-bookmark-after::before, .icon-fa-bookmark-after::after {
   font-weight: 400;
   text-rendering: auto;
@@ -25116,9 +25107,6 @@ html.bcbb-theme kbd {
           align-items: center;
   text-decoration: none;
 }
-.icon-fa-bookmark-after-solid:hover, .icon-fa-bookmark-after-solid:focus, .icon-fa-bookmark-after-solid:active {
-  text-decoration: underline;
-}
 .icon-fa-bookmark-after-solid::before, .icon-fa-bookmark-after-solid::after {
   font-weight: 400;
   text-rendering: auto;
@@ -25131,8 +25119,272 @@ html.bcbb-theme kbd {
   content: "\f02e";
 }
 
-.icon-fa-decoration-none:hover, .icon-fa-decoration-none:focus, .icon-fa-decoration-none:active {
+.icon-fa-circle-xmark {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-decoration: none;
+}
+.icon-fa-circle-xmark::before, .icon-fa-circle-xmark::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-circle-xmark::before, .icon-fa-circle-xmark::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-circle-xmark::before {
+  content: "\f057";
+}
+
+.icon-fa-circle-xmark-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-circle-xmark-solid::before, .icon-fa-circle-xmark-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-circle-xmark-solid::before, .icon-fa-circle-xmark-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-circle-xmark-solid::before {
+  content: "\f057";
+}
+
+.icon-fa-circle-xmark-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-circle-xmark-after::before, .icon-fa-circle-xmark-after::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-circle-xmark-after::before, .icon-fa-circle-xmark-after::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-circle-xmark-after::after {
+  content: "\f057";
+}
+
+.icon-fa-circle-xmark-after-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-circle-xmark-after-solid::before, .icon-fa-circle-xmark-after-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-circle-xmark-after-solid::before, .icon-fa-circle-xmark-after-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-circle-xmark-after-solid::after {
+  content: "\f057";
+}
+
+.icon-fa-filter {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-filter::before, .icon-fa-filter::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-filter::before, .icon-fa-filter::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-filter::before {
+  content: "\f0b0";
+}
+
+.icon-fa-filter-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-filter-solid::before, .icon-fa-filter-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-filter-solid::before, .icon-fa-filter-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-filter-solid::before {
+  content: "\f0b0";
+}
+
+.icon-fa-filter-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-filter-after::before, .icon-fa-filter-after::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-filter-after::before, .icon-fa-filter-after::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-filter-after::after {
+  content: "\f0b0";
+}
+
+.icon-fa-filter-after-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-filter-after-solid::before, .icon-fa-filter-after-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-filter-after-solid::before, .icon-fa-filter-after-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-filter-after-solid::after {
+  content: "\f0b0";
+}
+
+.icon-fa-magnifying-glass {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-magnifying-glass::before, .icon-fa-magnifying-glass::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-magnifying-glass::before, .icon-fa-magnifying-glass::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-magnifying-glass::before {
+  content: "\f002";
+}
+
+.icon-fa-magnifying-glass-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-magnifying-glass-solid::before, .icon-fa-magnifying-glass-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-magnifying-glass-solid::before, .icon-fa-magnifying-glass-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-magnifying-glass-solid::before {
+  content: "\f002";
+}
+
+.icon-fa-magnifying-glass-after {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-magnifying-glass-after::before, .icon-fa-magnifying-glass-after::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-magnifying-glass-after::before, .icon-fa-magnifying-glass-after::after {
+  font: var(--fa-font-regular);
+}
+.icon-fa-magnifying-glass-after::after {
+  content: "\f002";
+}
+
+.icon-fa-magnifying-glass-after-solid {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 0.5em;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+}
+.icon-fa-magnifying-glass-after-solid::before, .icon-fa-magnifying-glass-after-solid::after {
+  font-weight: 400;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+}
+.icon-fa-magnifying-glass-after-solid::before, .icon-fa-magnifying-glass-after-solid::after {
+  font: var(--fa-font-solid);
+}
+.icon-fa-magnifying-glass-after-solid::after {
+  content: "\f002";
+}
+
+.focus-underline:hover, .focus-underline:focus, .focus-underline:active {
+  text-decoration: underline;
 }
 
 .bc-gov-alertbanner {
