--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -57,8 +57,6 @@
 // SVG icons
 // Icon mixins take a colour argument that has to be hex or a 
 // variable that represents a hex
-// a function gets called that alters the colour encoding so
-// that it can be used as an svg fill in a data uri
 
 @mixin icon-error ($iconColor: $colorAlert-error) {
   // Embed https://fontawesome.com/v5/icons/exclamation-circle?f=classic&s=solid
@@ -90,11 +88,6 @@
   gap: 0.5em;
   align-items: center;
   text-decoration: none;
-  &:hover, 
-  &:focus, 
-  &:active {
-    text-decoration: underline;
-  }
   &::before,
   &::after {
     font-weight: 400;
@@ -115,13 +108,25 @@
   }
   @if $after {
     &::after {
-      content: $icon;
+      content: '#{$icon}';
     }
   } @else {
     &::before {
-      content: $icon;
+      content: '#{$icon}';
     }
   }
 }
 
 // ## UTILITIES ##
+
+// Extend an existing styles colour scheme
+// takes 3 arguments
+@mixin ext-color-scheme (
+  $background: $colorBrand-primary, 
+  $border: $colorAccent-primary, 
+  $color: rgba($colorWhite, 0.9)
+  ) {
+  background-color: $background;
+  border-color: $border; 
+  color: $color;
+}
