--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,23 +1,26 @@
 // fontawesome
 // importing core styling file
 // to use the local copy of font-awsome, uncomment:
-@import 
-  '../assets/fontawesome/scss/fontawesome.scss',
-  '../assets/fontawesome/scss/solid.scss',
-  '../assets/fontawesome/scss/regular.scss',
-  '../assets/fontawesome/scss/brands.scss';
+// @import
+//   '../assets/fontawesome/scss/fontawesome.scss',
+//   '../assets/fontawesome/scss/solid.scss',
+//   '../assets/fontawesome/scss/regular.scss',
+//  '../assets/fontawesome/scss/brands.scss';
+
+// Bootstrap icons
+@import '../assets/bootstrap-icons/bi.scss';
 
 
 // BC base-build theme
 // see design system https://digital.gov.bc.ca/common-components/design-system/
-@import 
+@import
   // global
   'variables',
   'functions',
   'mixins';
 
 
-@import 
+@import
   // overrides
   './overrides/variables_drupal',
   './overrides/variables_bootstrap',
@@ -46,7 +49,7 @@
 // #################################
 // DEV STYLES: disable in production
 // #################################
-@import 
+@import
 'devel';
 
 // ######## END DEV STYLES #########
