--- a/css/ck5style.css
+++ b/css/ck5style.css
@@ -13834,6 +13834,9 @@ a > .ck-content code {
   margin-right: -1.25em;
   content: "\f3e0";
 }
+.ck-content .icon-bi {
+  font-family: "bootstrap-icons" !important;
+}
 .ck-content .focus-underline:hover, .ck-content .focus-underline:focus, .ck-content .focus-underline:active {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='1'%3E%3Cline x1='0' y1='0.5' x2='10' y2='0.5' style='stroke: currentColor; stroke-width: 1;' /%3E%3C/svg%3E");
   background-repeat: repeat-x;
