--- a/css/style.css
+++ b/css/style.css
@@ -14826,6 +14826,10 @@ html.bcbb-theme kbd {
   content: "\f3e0";
 }
 
+.icon-bi {
+  font-family: "bootstrap-icons" !important;
+}
+
 .focus-underline:hover, .focus-underline:focus, .focus-underline:active {
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='10' height='1'%3E%3Cline x1='0' y1='0.5' x2='10' y2='0.5' style='stroke: currentColor; stroke-width: 1;' /%3E%3C/svg%3E");
   background-repeat: repeat-x;
