--- a/scss/style.scss
+++ b/scss/style.scss
@@ -35,6 +35,7 @@
   'typography',
   'html',
   'helpers',
+  './components/_text_decoration',
   './components/icons',
   './components/alerts',
   './components/badges',
