--- a/css/style.css
+++ b/css/style.css
@@ -14544,6 +14544,14 @@ html.bcbb-theme kbd {
   font-weight: 900 !important;
 }
 
+h1.page-title::after, .page-title.h1::after {
+  border-bottom: 0.18em solid #fcba19;
+  content: "";
+  display: block;
+  padding-bottom: 0.33em;
+  width: 3em;
+}
+
 .icon-bi-bookmark-plus {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
